--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-<li><a href="/categories/3">Moto</a></li><li><a href="/categories/5">Trem</a></li>
+<li><a href="/categories/8">Eletrônicos</a></li><li><a href="/categories/3">Moto</a></li><li><a href="/categories/5">Trem</a></li>
